--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.data.mongodb.port=${MONGODB_PORT:27017}
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 server.port=8052
+
+##### ----preflight OPTIONS---- ######
+spring.mvc.dispatch-options-request=true
